--- a/ReneApp/templates/ReneApp/base.html
+++ b/ReneApp/templates/ReneApp/base.html
@@ -22,8 +22,15 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'index' %}">inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'AgregarMeme' %}">Agregar Memes</a></li>
+                        {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'memes-list' %}">Ver memes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'AgregarMeme' %}">Agregar Memes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Update' %}">{{ request.user.username }}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Logout' %}">Logout</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Registro' %}">Registrate</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -45,7 +52,7 @@
 
     <!-- Footer-->
     <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+        <div class="container"><p class="m-0 text-center text-white">Rene Aranzaez &copy; Proyecto Final Python CoderHouse</p></div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
