--- a/ReneApp/templates/ReneApp/memes_list.html
+++ b/ReneApp/templates/ReneApp/memes_list.html
@@ -11,12 +11,20 @@
     <title>Memes</title>
 </head>
 <body>
+    <br>
     <h1>Lista de Memes</h1>
+    <br>
     <ul>
         {% for meme in object_list %}
         <li>
-            <p>subido por: {{ meme.name }}</p>
-            <img src="{{ meme.image.url }}" alt="Meme Image">
+            <p>subido por: {{ meme.user.username }}</p>
+            <br>
+            <p>{{ meme.name }}</p>
+            {% if meme.image.width > 500 or meme.image.height > 500 %}
+                <img src="{{ meme.image.url }}" alt="Meme Image" width="500" height="500">
+            {% else %}
+                <img src="{{ meme.image.url }}" alt="Meme Image">
+            {% endif %}
             <p>{{ meme.caption }}</p>
             <br>
             <br>
