--- a/ReneApp/templates/ReneApp/base.html
+++ b/ReneApp/templates/ReneApp/base.html
@@ -25,6 +25,7 @@
                         {% if request.user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'memes-list' %}">Ver memes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'AgregarMeme' %}">Agregar Memes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'mis-memes' %}">Mis memes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Update' %}">{{ request.user.username }}</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Logout' %}">Logout</a></li>
                         {% else %}
