cuarto commit: borrar memes de media y arrglo de about

--- a/ReneApp/templates/ReneApp/about.html
+++ b/ReneApp/templates/ReneApp/about.html
@@ -10,9 +10,13 @@
     <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <h2>Probando about</h2>
-                <p class="lead">aca va el about</p>
-                <p class="mb-0">trabajando en el about aca</p>
+                <h2>Sobre mi.</h2>
+                <p class="lead">Soy Rene Aranzaez, vivo en la ciudad de Antofagasta, Chile.</p>
+                <p class="mb-0">Vengo de un rubro completamente diferente (trabajo en la aviacion) por lo que este es de mis primeros acercamientos al mundo de la programacion
+                    o todo lo relacionado con el desarrollo web. siempre tuve ganas de aprender o adentrarme en esto pero no me atrevi ya que en casi la totalidad de carreras
+                    universitarias los primeros ramos son relacionados a las matematicas y al calculo, cosas que no se me dan del todo bien. Hasta que finalmente me decidi a probar
+                    y realmente ha sido un desafio pero de momento siento que voy por buen camino y con ganas de seguir aprendiendo.
+                </p>
             </div>
         </div>
     </div>
