--- a/ReneApp/templates/ReneApp/base.html
+++ b/ReneApp/templates/ReneApp/base.html
@@ -43,7 +43,7 @@
             <div class="text-center my-5">
                 <img class="img-fluid rounded-circle mb-4" src="{% static 'ReneApp/assets/img/naranjo1.jpg' %}" alt="..." width="300" height="300" />
                 <h1 class="text-white fs-3 fw-bolder">Bienvenido a mi pagina de memes</h1>
-                <p class="text-white-50 mb-0">gatos naranjas si o no</p>
+                <p class="text-white-50 mb-0">Proyecto final Coderhouse</p>
             </div>
         </header>
 
