--- a/ReneApp/templates/ReneApp/index.html
+++ b/ReneApp/templates/ReneApp/index.html
@@ -11,14 +11,15 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>pagina de memes</h2>
-                        <p class="lead">A single, lightweight helper class allows you to add engaging, full width background images to sections of your page.</p>
-                        <p class="mb-0">The universe is almost 14 billion years old, and, wow! Life had no problem starting here on Earth! I think it would be inexcusably egocentric of us to suggest that we're alone in the universe.</p>
+                        <p class="lead">Esta es mi pagina web tipo blog para el proyecto final de Coderhouse hecho en Django con Python</p>
+                        <p class="mb-0">Se supone que esto es una pagina para subir memes, pero enrealidad puede ser cualquier tipo de pagina que le permita subir fotos a los usuarios 
+                            incluyendo un nombre y una pequeña descripcion</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="background-image: url('https://source.unsplash.com/4ulffa6qoKA/1200x800')">
+        <div class="py-5 bg-image-full" style="background-image: url('https://static.wikia.nocookie.net/floppapedia-revamped/images/0/06/FLOPPA_IS_BIG_CHUNGUS_IN_REAL_LIFE%3F.gif/revision/latest?cb=20210522204438')">
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <div style="height: 20rem"></div>
         </div>
@@ -27,9 +28,9 @@
             <div class="container my-5">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
-                        <h2>Engaging Background Images</h2>
-                        <p class="lead">The background images used in this template are sourced from Unsplash and are open source and free to use.</p>
-                        <p class="mb-0">I can't tell you how many people say they were turned off from science because of a science teacher that completely sucked out all the inspiration and enthusiasm they had for the course.</p>
+                        <h2>Dije que era pagina de memes, mas o menos</h2>
+                        <p class="lead">Pues la verdad me gustan los gatos asi que veran varios aca</p>
+                        <p class="mb-0">pero como dije la tematica es que sea de memes asi que mientras a alguien le de risa o lo encuentre gracioso esta bien.</p>
                     </div>
                 </div>
             </div>
