quinto commit: trabajo finalizado

--- a/ReneApp/templates/ReneApp/add_memes.html
+++ b/ReneApp/templates/ReneApp/add_memes.html
@@ -11,8 +11,8 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <h2>Formulario para agregar memes</h2>
-                <p class="lead">en esta pagina debes agregar informacion de los cursos en el formulario de mas abajo</p>
-                <p class="mb-0">llena los campos de mas abajo, en cursos solo pueden ir caracteres y en camada numeros. una ves hecho esto,
+                <p class="lead">Pagina para agregar memes</p>
+                <p class="mb-0">llena los campos mas abajo. una ves hecho esto,
                     al presionar enviar la pagina te va a regresar al inicio automaticamente.
                 </p>
                 <br>
