--- a/ReneApp/templates/ReneApp/index.html
+++ b/ReneApp/templates/ReneApp/index.html
@@ -19,7 +19,7 @@
             </div>
         </section>
         <!-- Image element - set the background image for the header in the line below-->
-        <div class="py-5 bg-image-full" style="background-image: url('https://static.wikia.nocookie.net/floppapedia-revamped/images/0/06/FLOPPA_IS_BIG_CHUNGUS_IN_REAL_LIFE%3F.gif/revision/latest?cb=20210522204438')">
+        <div class="py-5 bg-image-full" style="background-image: url('https://media.tenor.com/z4llFHvQ2mwAAAAC/floppa-floppa-spin.gif')">
             <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
             <div style="height: 20rem"></div>
         </div>
